# scanner-laser

./: .gitmodules  README.md
astra_calibrada/: CMakeLists.txt  package.xml
astra_calibrada/calib/: astra.yaml  astra2.yaml
astra_calibrada/cfg/: params.cfg  params_iv.cfg  params_term.cfg
astra_calibrada/src/: astra_calibrada.cpp  astra_calibrada_felipe.cpp  calibrar_astra_online.cpp  calibrar_astra_zed.cpp  funde_ivensense.cpp  projeta_termica.cpp
dynamixel-workbench/: README.md
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: multi_port.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: multi_port.launch  position_control.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: multi_port.cpp  position_control.cpp
dynamixel-workbench/dynamixel_workbench_toolbox/src/: dynamixel_driver.cpp  dynamixel_multi_driver.cpp
laser2ptc/: CMakeLists.txt  package.xml
laser2ptc/launch/: laser.launch
laser2ptc/src/: laser2ptc.cpp
motor/: CMakeLists.txt  package.xml
motor/launch/: rodar_motor.launch
motor/resources/: scanner.rviz
motor/src/: mover_continuo.cpp  scanner.cpp
processo_registro/: CMakeLists.txt  package.xml
processo_registro/include/: registro.hpp
processo_registro/src/: registro.cpp  teste_felipe.cpp
scanner/: CMakeLists.txt  package.xml
scanner/launch/: lancar_dynamixel.launch
scanner_gui/: CMakeLists.txt  mainpage.dox  package.xml
scanner_gui/include/scanner_gui/: main_window.hpp  otimizacameraimagens.hpp  projetalaser.hpp  qnode.hpp  registra_nuvem.hpp  registro.hpp  saveandwork.hpp  scanner.hpp
scanner_gui/launch/: lancar_gui.launch  lancar_scanner.launch
scanner_gui/resources/: filtrando.rviz  nuvem.rviz  tgtsrc.rviz
scanner_gui/src/: main.cpp  main_window.cpp  otimizacameraimagens.cpp  projetalaser.cpp  qnode.cpp  registra_nuvem.cpp  registro.cpp  saveandwork.cpp  scanner.cpp  teste_felipe.cpp
scanner_gui/src2/: teste_felipe.cpp
scanner_gui/ui/: main_window.ui
termica_reconstrucao/: CMakeLists.txt  package.xml
termica_reconstrucao/launch/: reconstrucao_teste2.launch
termica_reconstrucao/src/: acumula_termica.cpp  dadosComZed.py  dadosSalvar.py  imTermicaScaled.py  imTermicaScaledOnline.py  projeta_termica.cpp  reconstrucaoF.cpp
