<?xml version="1.0"?>
<package>
  <name>astra_calibrada</name>
  <version>0.1.0</version>
  <description>The astra_calibrada package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="grin@todo.todo">grin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>image_transport</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>rosconsole</build_depend>
<build_depend>dynamic_reconfigure</build_depend>
<build_depend>urdf</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>image_geometry</build_depend>


<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>pcl_conversions</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>image_transport</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>tf2_ros</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>rosconsole</run_depend>
<run_depend>dynamic_reconfigure</run_depend>
<run_depend>urdf</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>image_geometry</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
