<?xml version="1.0"?>
<package>
  <name>motor</name>
  <version>0.1.0</version>
  <description>The motor package</description>

  <maintainer email="vinicius@todo.todo">vinicius</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
