<?xml version="1.0"?>
<package format="2">
  <name>scanner</name>
  <version>0.1.0</version>
  <description>The scanner package</description>

  <maintainer email="grin@todo.todo">grin</maintainer>

  <license>Apache 2.0</license>

  <author >Vinicius e Felipe</author>

  <buildtool_depend>catkin</buildtool_depend>
<!--  <build_depend> roscpp rospy sensor_msgs laser_geometry dynamixel_workbench_controllers dynamixel_workbench_single_manager dynamixel_workbench_toolbox dynamixel_workbench_msgs </build_depend>-->
<!--  <exec_depend> roscpp rospy sensor_msgs laser_geometry dynamixel_workbench_controllers dynamixel_workbench_single_manager dynamixel_workbench_toolbox dynamixel_workbench_msgs </exec_depend>-->
<!--  <build_export_depend> roscpp rospy sensor_msgs laser_geometry dynamixel_workbench_controllers dynamixel_workbench_single_manager dynamixel_workbench_toolbox dynamixel_workbench_msgs </build_export_depend>-->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
