<?xml version="1.0"?>
<package>
  <name>scanner_gui</name>
  <version>0.1.0</version>
  <description>

     scanner_gui

  </description>
  <maintainer email="vinicius@gmail.com">vinicius</maintainer>
  <author>vinicius</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>laser_geometry</run_depend>

</package>
